<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".caregiver.ui.user.CaregiverRegistrationActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <RelativeLayout
            android:id="@+id/relative"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:background="@drawable/toolbar_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!-- Back button -->
            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_centerVertical="true"
                android:contentDescription="@string/back_button"
                android:src="@drawable/baseline_arrow_back_24"
                app:tint="@color/white" />

            <!-- Account title -->
            <TextView
                android:id="@+id/title_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:fontFamily="@font/nunito_bold"
                android:gravity="center"
                android:text="@string/account"
                android:textColor="@color/white"
                android:textSize="24sp" />

        </RelativeLayout>

        <!-- White background -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-12dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_white_rounded"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/relative">


            <!-- Sign Up title -->
            <TextView
                android:id="@+id/title_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/nunito_bold"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textColor="@color/black"
                android:textSize="28sp" />


            <!-- User Registration subtitle -->
            <TextView
                android:id="@+id/subtitle_registration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/nunito_regular"
                android:gravity="center"
                android:text="@string/caregiver_registration"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <!-- Description -->
            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/nunito_regular"
                android:text="@string/lorem_ipsum"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <!-- Name Input -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/union">

                <TextView
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/nunito_regular"
                    android:text="@string/name"
                    android:textColor="@color/black" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/ed_name"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:textColorHint="@color/text_light"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:background="@color/white"
                    android:fontFamily="@font/nunito_regular"
                    android:hint="@string/full_name"
                    android:inputType="textPersonName"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:textColor="@color/black" />
            </RelativeLayout>


            <!-- Email Input -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/union">

                <TextView
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/nunito_regular"
                    android:text="@string/email"
                    android:textColor="@color/black" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/ed_email"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:textColorHint="@color/text_light"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:background="@color/white"
                    android:fontFamily="@font/nunito_regular"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:textColor="@color/black" />
            </RelativeLayout>


            <!-- Phone Input -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/union">

                <TextView
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/nunito_regular"
                    android:text="@string/phone"
                    android:textColor="@color/black" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/ed_phone"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/white"
                    android:textColorHint="@color/text_light"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:fontFamily="@font/nunito_regular"
                    android:hint="@string/phone_hint"
                    android:inputType="textEmailAddress"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:textColor="@color/black" />
            </RelativeLayout>


            <!-- DOB Input -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/union">

                <TextView
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/nunito_regular"
                    android:text="@string/dob"
                    android:textColor="@color/black" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/ed_dob"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/white"
                    android:fontFamily="@font/nunito_regular"
                    android:textColorHint="@color/text_light"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:hint="@string/dob_hint"
                    android:inputType="textEmailAddress"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:textColor="@color/black" />
            </RelativeLayout>
            <!-- Password Input -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/union">

                <TextView
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="13dp"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/nunito_regular"
                    android:text="@string/password"
                    android:textColor="@color/black" />
                
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/ed_password"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:textColorHint="@color/text_light"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:background="@color/white"
                    android:fontFamily="@font/nunito_regular"
                    android:hint="************"
                    android:inputType="textEmailAddress"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:textColor="@color/black" />
            </RelativeLayout>
            <!-- Caregiver License  Section -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/union_card">

                <TextView
                    android:id="@+id/driving_card_text"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/nunito_regular"
                    android:text="@string/driving_license"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:id="@+id/driving_card_section"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/driving_card_text"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/driving_card_front"
                        style="@style/MaterialAlertDialog.Material3.Body.Text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_white_outlined"
                        android:drawableStart="@android:drawable/ic_menu_camera"
                        android:paddingStart="8dp"
                        android:text="@string/front_side"
                        app:drawableTint="@color/black" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/driving_card_back"
                        style="@style/MaterialAlertDialog.Material3.Body.Text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_white_outlined"
                        android:drawableStart="@android:drawable/ic_menu_camera"
                        android:paddingStart="8dp"
                        android:text="@string/back_side"
                        app:drawableTint="@color/black" />
                </LinearLayout>
            </RelativeLayout>


            <!-- Caregiver Card Section -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/union_card">

                <TextView
                    android:id="@+id/caregiver_card_text"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/nunito_regular"
                    android:text="@string/caregiver_card"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:id="@+id/patient_card_section"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/caregiver_card_text"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/caregiver_card_front"
                        style="@style/TextAppearance.AppCompat.Small"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_white_outlined"
                        android:drawableStart="@android:drawable/ic_menu_camera"
                        android:paddingStart="8dp"
                        android:text="@string/front_side"
                        app:drawableTint="@color/black" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/caregiver_card_back"
                        style="@style/TextAppearance.AppCompat.Small"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_white_outlined"
                        android:drawableStart="@android:drawable/ic_menu_camera"
                        android:paddingStart="8dp"
                        android:text="@string/back_side"
                        app:drawableTint="@color/black" />
                </LinearLayout>
            </RelativeLayout>

            <!-- Continue Button -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/continue_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/button_bg"
                android:text="@string/continue1"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/patient_card_section" />


            <!-- Terms of Service and Privacy Policy -->
            <TextView
                android:id="@+id/terms_and_privacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                style="@style/TextAppearance.AppCompat.Small"
                android:fontFamily="@font/nunito_regular"
                android:gravity="center"
                android:text="@string/terms_and_privacy"
                android:textColor="@color/button_text"
                android:textSize="12sp" />

            <!-- Login  -->
            <TextView
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/nunito_regular"
                style="@style/TextAppearance.AppCompat.Small"
                android:gravity="center"
                android:text="@string/already_account"
                android:textColor="@color/button_text"
                android:textSize="14sp" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
