<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.sokoldev.budgo.patient.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_menu"
        android:name="com.sokoldev.budgo.patient.ui.menu.MenuFragment"
        android:label="@string/title_menu"
        tools:layout="@layout/fragment_menu" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.sokoldev.budgo.patient.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_navigation_profile_to_completeOrderFragment"
            app:destination="@id/completeOrderFragment" />
        <action
            android:id="@+id/action_navigation_profile_to_updateProfileFragment"
            app:destination="@id/updateProfileFragment" />
        <action
            android:id="@+id/action_navigation_profile_to_resetPasswordFragment2"
            app:destination="@id/resetPasswordFragment2" />
    </fragment>

    <fragment
        android:id="@+id/navigation_order"
        android:name="com.sokoldev.budgo.patient.ui.order.OrderFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_order" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.sokoldev.budgo.patient.ui.cart.CartFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_cart" >
        <action
            android:id="@+id/action_navigation_cart_to_cancellationFragment"
            app:destination="@id/cancellationFragment" />
    </fragment>
    <fragment
        android:id="@+id/cancellationFragment"
        android:name="com.sokoldev.budgo.patient.ui.cart.CancellationFragment"
        android:label="CancellationFragment" >
        <action
            android:id="@+id/action_cancellationFragment_to_navigation_cart"
            app:destination="@id/navigation_cart" />
    </fragment>
    <fragment
        android:id="@+id/completeOrderFragment"
        android:name="com.sokoldev.budgo.common.ui.orders.CompleteOrderFragment"
        android:label="CompleteOrderFragment" />
    <fragment
        android:id="@+id/updateProfileFragment"
        android:name="com.sokoldev.budgo.patient.ui.profile.UpdateProfileFragment"
        android:label="UpdateProfileFragment" />
    <fragment
        android:id="@+id/resetPasswordFragment2"
        android:name="com.sokoldev.budgo.common.ui.user.ResetPasswordFragment"
        android:label="fragment_reset_password"
        tools:layout="@layout/fragment_reset_password" />

</navigation>